# Python

./: Eigenfaces.py  Interpolation.py
Learning From Data/BayesClassifier/: BayesClassifier.py  test2.csv  test3.csv  train2.csv  train3.csv
Learning From Data/SVM and Dimension Reduction/: SVMandDimRed.py
Learning From Data/nwt-grad-nonlinreg/: nwt-grad-nonlinreg.py
Robotic/explorernode/a1_456_answer/src/: explorer_node_a1_456_python.py
Robotic/explorernode/a1_456_referee/: CMakeLists.txt
Robotic/explorernode/a1_456_referee/launch/: a1.launch
Robotic/explorernode/a1_456_referee/rviz/: a1.rviz
Robotic/explorernode/a1_456_referee/src/: referee_node_a1_456.cpp
Robotic/explorernode/a1_456_referee/worlds/: willow_garage_with_map_publ.world
Robotic/roboticarm/src/robo_arm_control/: CMakeLists.txt  package.xml
Robotic/roboticarm/src/robo_arm_control/config/: robo_arm_control.yaml
Robotic/roboticarm/src/robo_arm_control/launch/: robo_arm_control.launch  robo_arm_rqt.launch  robo_arm_rqt.perspective
Robotic/roboticarm/src/robo_arm_control/src/: python_control.py
Robotic/roboticarm/src/robo_arm_description/: CMakeLists.txt  package.xml
Robotic/roboticarm/src/robo_arm_description/launch/: robo_arm.rviz  robo_arm_rviz.launch
Robotic/roboticarm/src/robo_arm_description/urdf/: robo_arm.gazebo  robo_arm.xacro
Robotic/roboticarm/src/robo_arm_gazebo/: CMakeLists.txt  package.xml
Robotic/roboticarm/src/robo_arm_gazebo/launch/: robo_arm_world.launch
Robotic/roboticarm/src/robo_arm_gazebo/worlds/: robo_arm.world  robo_arm_old.world
WiRe/: main.py  tests.py
