<?xml version="1.0"?>
<package>
  <name>robo_arm_gazebo</name>
  <version>0.0.0</version>
  <description>The robo_arm_gazebo package</description>

  <maintainer email="demirb@todo.todo">demirb</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rrbot_control</run_depend>
  <!--run_depend>rrbot_description</run_depend-->
  <run_depend>xacro</run_depend>

  <export>
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." /> 
  </export>
</package>
